Added utils and javascript

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 Blah blah blah
             </p>
             <label>
-                <input type="radio" name="choice">
+                <input type="radio" name="choice" value="rock">
                 <img src="cool-rock.png" alt="Rock">
             </label>
             <label>
-                <input type="radio" name="choice">
+                <input type="radio" name="choice" value="paper">
                 <img src="cool-paper.png" alt="Paper">
             </label>
             <label>
-                <input type="radio" name="choice">
+                <input type="radio" name="choice" value="scissors">
                 <img src="cool-scissors.png" alt="Scissors">
             </label>
             <div id="results"></div>
