updated event listener and got button to work

--- a/index.html
+++ b/index.html
@@ -27,22 +27,24 @@
                 Blah blah blah
             </p>
             <label>
-                <input type="radio" name="choice" value="rock">
+                <input type="radio" name="choice" value="rock" id="rock">
                 <img src="cool-rock.png" alt="Rock">
             </label>
             <label>
-                <input type="radio" name="choice" value="paper">
+                <input type="radio" name="choice" value="paper" id="paper">
                 <img src="cool-paper.png" alt="Paper">
             </label>
             <label>
-                <input type="radio" name="choice" value="scissors">
+                <input type="radio" name="choice" value="scissors" id="scissors">
                 <img src="cool-scissors.png" alt="Scissors">
             </label>
+
+
             <div id="results"></div>
             <button id="play">Play</button>
-
             <div id="wins"></div>
             <div id="losses"></div>
+            <div id="draws"></div>
 
 
 
@@ -54,7 +56,7 @@
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
