got everything working and fixed image sizes

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             </p>
             <label>
                 <input type="radio" name="choice" value="rock" id="rock">
-                <img src="cool-rock.png" alt="Rock">
+                <img src="cool-rock.png" alt="Rock" width="350" height="300">
             </label>
             <label>
                 <input type="radio" name="choice" value="paper" id="paper">
-                <img src="cool-paper.png" alt="Paper">
+                <img src="cool-paper.png" alt="Paper" width="350" height="300">
             </label>
             <label>
                 <input type="radio" name="choice" value="scissors" id="scissors">
-                <img src="cool-scissors.png" alt="Scissors">
+                <img src="cool-scissors.png" alt="Scissors" width="350" height="300">
             </label>
 
 
@@ -45,6 +45,7 @@
             <div id="wins"></div>
             <div id="losses"></div>
             <div id="draws"></div>
+            <div id="total"></div>
 
 
 
