added spock and lizard

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-         
-        </div>
+        <div class="gutter-right logo"></div>
     </header>
     <main>
         <section class="main-section">
             <h2>
-                Rock Scissors Paper
+                Rock Scissors Paper Lizard Spock
             </h2>
             <p>
-                Blah blah blah
+                As Sheldon explains, "Scissors cuts paper, paper covers rock, 
+                rock crushes lizard, lizard poisons Spock, Spock smashes scissors, 
+                scissors decapitates lizard, lizard eats paper, paper disproves Spock, 
+                Spock vaporizes rock, and as it always has, rock crushes scissors."
             </p>
             <label>
                 <input type="radio" name="choice" value="rock" id="rock">
@@ -38,8 +39,17 @@
                 <input type="radio" name="choice" value="scissors" id="scissors">
                 <img src="cool-scissors.png" alt="Scissors" width="350" height="300">
             </label>
+            <label>
+            <input type="radio" name="choice" value="lizard" id="lizard">
+            <img src="Lizard.png" alt="Lizard" width="350" height="300">
+            </label>
+            <label>
+                <input type="radio" name="choice" value="spock" id="spock">
+                <img src="Spock.png" alt="Spock" width="350" height="300">
+            </label>
 
 
+           
             <div id="results"></div>
             <button id="play">Play</button>
             <div id="wins"></div>
